# packages-clib

./: .gitignore  CMakeLists.txt  Makefile.in  Makefile.mak  README.md  bsd-crypt.c  cgi.c  cgi.pl  clib.doc  clib.h  clib.plx  config.h.cmake  configure.ac  configure.in  crypt.c  crypt.pl  error.c  error.h  esymbols.ic  files.c  filesex.pl  form.c  form.h  hash_stream.c  hash_stream.pl  mallocinfo.c  mallocinfo.pl  md5.pl  md54pl.c  md5passwd.c  memfile.c  memfile.pl  mime.c  mime.pl  nonblockio.c  nonblockio.h  pltotex.pl  process.c  process.pl  prolog_server.pl  (+48 more)
cmake/: FindLibUUID.cmake
demo/: cgidemo.pl  fork.pl  pipe.pl  win.pl
maildrop/rfc2045/: configure.in  rfc2045.c  rfc2045acchk.c  rfc2045cdecode.c  rfc2045mkboundary.c  rfc2045rewrite.c  rfc2045tryboundary.c
maildrop/rfc822/: configure.in  rfc2047.c  rfc822_getaddrs.c
sha1/: brg_endian.h  hmac_sha1.c  hmac_sha256.c  sha1.c  sha2.c
